--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-    <div *ngIf="!createMode" class="col-md-1 mx-auto my-4">
+    <div *ngIf="!createMode" class="col-md-1 mx-auto my-4 text-center">
         <button class="btn btn-success btn-circle btn-circle-sm m-1" 
                 (click)="generateCreateForm()">
                 <i class="fa fa-plus"></i>
