--- a/src/app/pages/metric-chart/metric-chart.component.html
+++ b/src/app/pages/metric-chart/metric-chart.component.html
@@ -2,7 +2,19 @@
     <div class="col-md-12">
         <div class="card ">
             <div class="card-header">
-                <h5 class="card-title">{{chartInfo.chartName}}</h5>
+                <div class="row">
+                    <div class="col-5">
+                        <h5 class="card-title">{{chartInfo.chartName}}</h5>
+                    </div>
+                    <div class="col-2 text-center">
+                        <button type="button" class="btn btn-primary" (click)="openDetails()">Details</button>
+                    </div>
+                    <div class="col-5 text-right">
+                        <button type="button" class="btn btn-danger" (click)="deleteChart()">Delete</button>
+                        <button type="button" class="btn" (click)="editChart()">Edit</button>
+                        
+                    </div>
+                </div>
                 <p class="card-category my-1" *ngIf="chartInfo.metricName">Metrics: {{chartInfo.metricName}}</p>
                 <p class="card-category my-1" *ngIf="chartInfo.clientId">ClientId: {{chartInfo.clientId}}</p>
             </div>
