some graph experimentations

--- a/src/app/pages/metric-details/metric-details.component.html
+++ b/src/app/pages/metric-details/metric-details.component.html
@@ -4,7 +4,7 @@
     <i class="fa fa-close"></i>
   </button>
   <app-metric-chart [showButtons]="false" [chartInfo]="chart"></app-metric-chart>
-  <dx-data-grid class="w-100"
+  <dx-data-grid class="w-100 px-2"
                 [dataSource]="metrics"
                 [allowColumnReordering]="true"
                 [allowColumnResizing]="true"
