--- a/src/app/pages/detector-details/detector-details.component.html
+++ b/src/app/pages/detector-details/detector-details.component.html
@@ -1,3 +1,177 @@
 <div class="card">
-  Cock
+  <button class="btn btn-circle btn-circle-sm m-2"
+          (click)="closeDetails()">
+    <i class="fa fa-close"></i>
+  </button>
+  <div class="card-header text-center">
+    <h2>Detail & Edit</h2>
+  </div>
+  <div class="card-body">
+    <form [formGroup]="myForm" (ngSubmit)="submitForm()">
+      <div class="row form-group">
+        <div class="col-6 border-right">
+          <div class="text-center">
+            <h4 class="mt-0">Detector Config</h4>
+          </div>
+          <div class="input-group row">
+            <span class="col-4 d-flex align-items-center">
+              Telemetric Name
+            </span>
+            <div class="col-8">
+              <select class="form-control text-center" formControlName="metricName">
+                <option *ngFor="let name of metricNames" value="{{name}}">{{name}}</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="input-group row">
+            <span class="col-4 d-flex align-items-center">
+              Type
+            </span>
+            <div class="col-8">
+              <select class="form-control text-center" formControlName="type" (change)="typeSelectChange()" disabled="editMode">
+                <option *ngFor="let detectorT of detectorTypes" [value]="detectorT">{{detectorT}}</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="input-group row">
+            <span class="col-4 d-flex align-items-center">
+              Action Type
+            </span>
+            <div class="col-8">
+              <select class="form-control text-center" formControlName="aType" (change)="actionTypeSelectChange()">
+                <option *ngFor="let actionT of actionTypes" [value]="actionT">{{actionT}}</option>
+              </select>
+            </div>
+          </div>
+          <div class="input-group row">
+            <span class="col-4 d-flex align-items-center">
+              Execution Interval (HH:MM:SS)
+            </span>
+            <div class="col-8 d-flex justify-content-center">
+              <ngb-timepicker formControlName="interval" [seconds]=true></ngb-timepicker>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-6">
+          <div *ngIf="showMinMaxConfig">
+            <div class="text-center">
+              <h4 class="mt-0">Min/Max Config</h4>
+            </div>
+            <div class="input-group row">
+              <span class="col-4 d-flex align-items-center">
+                Minimum
+              </span>
+              <div class="col-8">
+                <div class="input-group m-0">
+                  <input type="number" class="form-control text-center row" formControlName="min" placeholder="Enter minimum">
+                </div>
+              </div>
+            </div>
+
+            <div class="input-group row">
+              <span class="col-4 d-flex align-items-center">
+                Maximum
+              </span>
+              <div class="col-8">
+                <div class="input-group m-0">
+                  <input type="number" class="form-control text-center row" formControlName="max" placeholder="Enter maximum">
+                </div>
+              </div>
+            </div>
+
+            <div class="input-group row">
+              <span class="col-4 d-flex align-items-center">
+                Outlier Count
+              </span>
+              <div class="col-8">
+                <div class="input-group m-0">
+                  <input type="number" class="form-control text-center row" formControlName="outliers" placeholder="Enter outlierCount">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div *ngIf="showSlidingWindowConfig">
+            <div class="text-center">
+              <h4 class="mt-0">SlidingWindow Config</h4>
+            </div>
+            <div class="input-group row">
+              <span class="col-4 d-flex align-items-center">
+                Aggregation
+              </span>
+              <div class="col-8">
+                <select class="form-control text-center" formControlName="aggT">
+                  <option *ngFor="let aggT of aggregationTypes" [value]="aggT">{{aggT}}</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="input-group row">
+              <span class="col-4 d-flex align-items-center">
+                Comparison
+              </span>
+              <div class="col-8">
+                <select class="form-control text-center" formControlName="compT">
+                  <option *ngFor="let compT of comparisonTypes" [value]="compT">{{compT}}</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="input-group row">
+              <span class="col-4 d-flex align-items-center">
+                Threshold
+              </span>
+              <div class="col-8">
+                <div class="input-group m-0">
+                  <input type="number" class="form-control text-center row" formControlName="thresh" placeholder="Enter threshold">
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr/>
+          <div class="text-center">
+            <h4 class="mt-0">Action Config</h4>
+          </div>
+          <div *ngIf="showMailActionConfig">
+            <div class="input-group row">
+              <span class="col-4 d-flex align-items-center">
+                Mail Address
+              </span>
+              <div class="col-8">
+                <div class="input-group m-0">
+                  <input type="text" class="form-control text-center row" formControlName="mail" placeholder="Enter e-mail">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div *ngIf="showWebActionConfig">
+            <div class="input-group row">
+              <span class="col-4 d-flex align-items-center">
+                Web Hook
+              </span>
+              <div class="col-8">
+                <div class="input-group m-0">
+                  <input type="text" class="form-control text-center row" formControlName="web" placeholder="Enter webhook">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row w-100 ml-1">
+        <div class="col-3 text-left">
+          <button type="button" class="btn btn-danger" (click)="closeDetails()">Close</button>
+        </div>
+        <div *ngIf="editMode" class="col-9 text-right">
+          <button type="submit" class="btn btn-success" [disabled]="myForm.invalid">Apply</button>
+        </div>
+        <div *ngIf="!editMode" class="col-9 text-right">
+          <button type="submit" class="btn btn-success" [disabled]="myForm.invalid">Create</button>
+        </div>
+      </div>
+    </form>
+  </div>
+
 </div>
