--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -12,5 +12,10 @@
                 <p>{{menuItem.title}}</p>
             </a>
         </li>
+        <li  class="text-center">
+          <button *ngIf="loggedIn" class="btn btn-danger" (click)="logout()">Log Out</button>
+          <button *ngIf="!loggedIn" class="btn btn-info" (click)="login()">Log In</button>
+        </li>
+
     </ul>
 </div>
