--- a/src/app/pages/detector-details/detector-details.component.html
+++ b/src/app/pages/detector-details/detector-details.component.html
@@ -29,7 +29,7 @@
               Type
             </span>
             <div class="col-8">
-              <select class="form-control text-center" formControlName="type" (change)="typeSelectChange()" [disabled]="editMode">
+              <select class="form-control text-center" formControlName="type" (change)="typeSelectChange()">
                 <option *ngFor="let detectorT of detectorTypes" [value]="detectorT">{{detectorT}}</option>
               </select>
             </div>
