--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <app-metric-details *ngIf="detailMode"
-                    [chart]="focusedChart"
+                    [chartInfo]="focusedChart"
                     [metrics]="detailModeMetrics"
                     (closeEvent)="closeDetail()"></app-metric-details>
 
