--- a/src/app/pages/metric-details/metric-details.component.html
+++ b/src/app/pages/metric-details/metric-details.component.html
@@ -3,7 +3,7 @@
           (click)="closeDetails()">
     <i class="fa fa-close"></i>
   </button>
-  <app-metric-chart [showButtons]="false" [chartInfo]="chart"></app-metric-chart>
+  <app-metric-chart [showButtons]="false" [chartInfo]="chartInfo"></app-metric-chart>
   <dx-data-grid class="w-100 px-2"
                 [dataSource]="metrics"
                 [allowColumnReordering]="true"
